Fix button contrast ratio

--- a/style.css
+++ b/style.css
@@ -591,7 +591,8 @@ footer {
   }
 
   .primary-color {
-    background-color: #ff6b00;
+    background-color: #f55800;
+    ;
   }
 
   .secondary-color {
